templates/src/data-curator/content/force-app/main/default/objects/Scan_Run__c/Scan_Run__c.object-meta.xml
<CustomObject>
    <description>Execution record for inventory scans and remediation analysis runs.</description>
    <label>Scan Run</label>
    <nameField>
        <label>Scan Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scan Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>