templates/src/data-curator/content/force-app/main/default/objects/Scan_Run__c/fields/Assets_Scanned__c.field-meta.xml
<CustomField>
    <fullName>Assets_Scanned__c</fullName>
    <label>Assets Scanned</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>