templates/src/data-curator/content/force-app/main/default/objects/Scan_Run__c/fields/Duplicate_Clusters__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Clusters__c</fullName>
    <label>Duplicate Clusters</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>