templates/src/data-curator/content/force-app/main/default/objects/Scan_Run__c/fields/Stale_Count__c.field-meta.xml
<CustomField>
    <fullName>Stale_Count__c</fullName>
    <label>Stale Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>