templates/src/data-curator/content/force-app/main/default/objects/Scan_Run__c/fields/Unassigned_Count__c.field-meta.xml
<CustomField>
    <fullName>Unassigned_Count__c</fullName>
    <label>Unassigned Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>